replaced Base64-implementation with the one from Xerces